@@ -15,6 +15,7 @@ import ru.game.aurora.dialog.DialogListener;
 import ru.game.aurora.dialog.IntroDialog;
 import ru.game.aurora.gui.GUI;
 import ru.game.aurora.gui.IntroDialogController;
+import ru.game.aurora.gui.LoadingScreenController;
 import ru.game.aurora.gui.StoryScreen;
 import ru.game.aurora.util.EngineUtils;
 import ru.game.aurora.world.IStateChangeListener;
@@ -35,14 +36,8 @@ public class MainMenuController implements ScreenController {
 
     private World loadedState = null;
 
-    // used for changing number of dots in message while generating world
-    private int dotsCount = 0;
-
-    private long lastTimeChecked = 0;
 
     private GameContainer container;
-
-    private Animation shuttle_landing;
 
     private Animation upperEngine;
 
@@ -64,7 +59,6 @@ public class MainMenuController implements ScreenController {
         lowerEngine.start();
     }
 
-
     // these methods are specified in screen xml description and called using reflection
     public void loadGame() {
         final Nifty nifty = GUI.getInstance().getNifty();
@@ -79,15 +73,39 @@ public class MainMenuController implements ScreenController {
     }
 
     public void newGame() {
-        shuttle_landing = ResourceManager.getInstance().getAnimation("shuttle_landing");
-        shuttle_landing.setAutoUpdate(false);
-        shuttle_landing.setLooping(true);
-        shuttle_landing.start();
         generator = new WorldGenerator();
+        World world = generator.initWorld();
+
+        GUI.getInstance().onWorldLoaded(container, world);
         new Thread(generator).start();
-        Element elem = GUI.getInstance().getNifty().createPopup("generation");
-        GUI.getInstance().getNifty().showPopup(GUI.getInstance().getNifty().getCurrentScreen(), elem.getId(), null);
-        EngineUtils.setTextForGUIElement(elem.findElementByName("generation_text"), "Initializing...");
+        ((LoadingScreenController) GUI.getInstance().getNifty().findScreenController(LoadingScreenController.class.getCanonicalName())).setGenerator(generator);
+
+        if (Configuration.getBooleanProperty("debug.skipIntro")) {
+            logger.warn("Skipping intro because debug.skipIntro property is set");
+            world.getGlobalVariables().put("player.country", "america");
+            GUI.getInstance().getNifty().gotoScreen("loading_screen");
+        } else {
+            world.addOverlayWindow(createInitialDialog());
+            GUI.getInstance().popScreen();
+            GUI.getInstance().pushScreen("loading_screen");
+
+            world.addOverlayWindow(new StoryScreen("story/beginning.json"));
+            IntroDialog dialog = IntroDialog.load("story/intro_1.json");
+            GUI.getInstance().pushScreen("story_screen");
+            IntroDialogController introDialogController = (IntroDialogController) GUI.getInstance().getNifty().findScreenController(IntroDialogController.class.getName());
+            introDialogController.setIntroDialog(dialog);
+            introDialogController.setEndListener(new IStateChangeListener() {
+
+                private static final long serialVersionUID = -167349630557155374L;
+
+                @Override
+                public void stateChanged(World world) {
+                    GUI.getInstance().pushCurrentScreen();
+                    GUI.getInstance().getNifty().gotoScreen("country_select_screen");
+                }
+            });
+            GUI.getInstance().getNifty().gotoScreen("intro_dialog");
+        }
     }
 
     public void exitGame() {
@@ -100,10 +118,11 @@ public class MainMenuController implements ScreenController {
         GUI.getInstance().getNifty().gotoScreen("settings_screen");
     }
 
-    private Dialog createInitialDialog(final World world)
-    {
+    private Dialog createInitialDialog() {
         final Dialog gameStartDialog = Dialog.loadFromFile("dialogs/tutorials/game_start_tutorial.json");
         gameStartDialog.setListener(new DialogListener() {
+            private static final long serialVersionUID = 3479062521122587288L;
+
             @Override
             public void onDialogEnded(World world, Dialog dialog, int returnCode, Map<String, String> flags) {
                 Dialog d = null;
@@ -112,6 +131,8 @@ public class MainMenuController implements ScreenController {
                         d = Dialog.loadFromFile("dialogs/tutorials/marine_intro.json");
                         world.getGlobalVariables().put("crew.military", 1);
                         d.setListener(new DialogListener() {
+                            private static final long serialVersionUID = -7928559144883640398L;
+
                             @Override
                             public void onDialogEnded(World world, Dialog dialog, int returnCode, Map<String, String> flags) {
                                 if (returnCode == -1) {
@@ -127,6 +148,9 @@ public class MainMenuController implements ScreenController {
                         d = Dialog.loadFromFile("dialogs/tutorials/engineer_intro.json");
                         world.getGlobalVariables().put("crew.engineer", 1);
                         d.setListener(new DialogListener() {
+
+                            private static final long serialVersionUID = -5149956426932570110L;
+
                             @Override
                             public void onDialogEnded(World world, Dialog dialog, int returnCode, Map<String, String> flags) {
                                 if (returnCode == -1) {
@@ -143,6 +167,8 @@ public class MainMenuController implements ScreenController {
                         d = Dialog.loadFromFile("dialogs/tutorials/scientist_intro.json");
                         world.getGlobalVariables().put("crew.scientist", 1);
                         d.setListener(new DialogListener() {
+                            private static final long serialVersionUID = 3028202497230253046L;
+
                             @Override
                             public void onDialogEnded(World world, Dialog dialog, int returnCode, Map<String, String> flags) {
                                 if (returnCode == -1) {
@@ -168,44 +194,18 @@ public class MainMenuController implements ScreenController {
 
 
     public World update(Camera camera, GameContainer container) {
-        background.update(container);
+        if (background != null) {
+            background.update(container);
+        }
         if (generator != null) {
             if (generator.isGenerated()) {
                 final World world = generator.getWorld();
-                GUI.getInstance().onWorldLoaded(container, world);
                 world.setCamera(camera);
                 world.getCurrentRoom().enter(world);
                 // add them here and not in world generator, as gui must be created first
-
-                if (Configuration.getBooleanProperty("debug.skipIntro")) {
-                    logger.warn("Skipping intro because debug.skipIntro property is set");
-                    world.getGlobalVariables().put("player.country", "america");
-                    return world;
-                }
-
-                world.addOverlayWindow(createInitialDialog(world));
-
-                world.addOverlayWindow(new StoryScreen("story/beginning.json"));
-                IntroDialog dialog = IntroDialog.load("story/intro_1.json");
-                GUI.getInstance().pushCurrentScreen();
-                IntroDialogController introDialogController = (IntroDialogController) GUI.getInstance().getNifty().findScreenController(IntroDialogController.class.getName());
-                introDialogController.setIntroDialog(dialog);
-                introDialogController.setEndListener(new IStateChangeListener() {
-                    @Override
-                    public void stateChanged(World world) {
-                        GUI.getInstance().pushCurrentScreen();
-                        GUI.getInstance().getNifty().gotoScreen("country_select_screen");
-                    }
-                });
-                GUI.getInstance().getNifty().gotoScreen("intro_dialog");
                 return world;
             }
-            if (container.getTime() - lastTimeChecked > 500) {
-                if (dotsCount++ > 5) {
-                    dotsCount = 0;
-                }
-                lastTimeChecked = container.getTime();
-            }
+
             return null;
         }
 
@@ -213,29 +213,17 @@ public class MainMenuController implements ScreenController {
     }
 
 
-    public void draw(Graphics graphics, Camera camera) {
-        background.draw(graphics);
-        Image shipImage = ResourceManager.getInstance().getImage("menu_ship");
-        int shipX = (int) (AuroraGame.tilesX * AuroraGame.tileSize * 0.1);
-        int shipY = (int) (AuroraGame.tilesY * AuroraGame.tileSize - shipImage.getHeight() - 100);
-        graphics.drawAnimation(upperEngine, shipX - 195, shipY + 110);
-        graphics.drawAnimation(lowerEngine, shipX - 195, shipY + 200);
-        graphics.drawImage(shipImage, shipX, shipY);
-
-
-        if (generator != null) {
-            StringBuilder sb = new StringBuilder(Localization.getText("gui", "generation.prefix")).append(" ");
-            sb.append(generator.getCurrentStatus());
-            for (int i = 0; i < dotsCount; ++i) {
-                sb.append(".");
-            }
-            final Element topMostPopup = GUI.getInstance().getNifty().getTopMostPopup();
-            EngineUtils.setTextForGUIElement(topMostPopup.findElementByName("generation_text"), sb.toString());
-            final Element shuttle_image = topMostPopup.findElementByName("shuttle_image");
-            final long delta = container.getTime() - AuroraGame.getLastFrameTime();
-            shuttle_landing.update(delta);
-            EngineUtils.setImageForGUIElement(shuttle_image, shuttle_landing.getCurrentFrame());
+    public void draw(Graphics graphics) {
+        if (background != null) {
+            background.draw(graphics);
+            Image shipImage = ResourceManager.getInstance().getImage("menu_ship");
+            int shipX = (int) (AuroraGame.tilesX * AuroraGame.tileSize * 0.1);
+            int shipY = AuroraGame.tilesY * AuroraGame.tileSize - shipImage.getHeight() - 100;
+            graphics.drawAnimation(upperEngine, shipX - 195, shipY + 110);
+            graphics.drawAnimation(lowerEngine, shipX - 195, shipY + 200);
+            graphics.drawImage(shipImage, shipX, shipY);
         }
+
     }
 
 
@@ -261,8 +249,6 @@ public class MainMenuController implements ScreenController {
     public void reset() {
         generator = null;
         loadedState = null;
-        dotsCount = 0;
-        lastTimeChecked = 0;
     }
 
     public void closeCurrentPopup() {
